--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-test-utils": "^1.0.0-beta.11"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.15",
     "autoprefixer": "^7.2.6",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-transform-runtime": "^6.22.0",
@@ -48,6 +51,8 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
+    "jest": "^22.4.3",
+    "jest-vue-preprocessor": "^1.4.0",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
