--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "6.9"
+  - "9.8.0"
 
 branches:
   only:
@@ -9,6 +9,7 @@ branches:
 before_script:
   - npm install -g firebase-tools
   - npm install -g @vue/cli
+  - npm run test
 
 script:
   -  npm run build
